# CodeSolderRepeat

./: .gitignore  README.md  solana.md
Autonomous-Hacks/: solana.md
Autonomous-Hacks/frontend/: hello.txt  index.html
Autonomous-Hacks/frontend/docs/: city_command.md
Autonomous-Hacks/frontend/municipal-pulse-main/: package.json
Autonomous-Hacks/frontend/municipal-pulse-main/public/: index.html  rts.geojson
Autonomous-Hacks/frontend/municipal-pulse-main/src/: App.tsx  index.css
Autonomous-Hacks/harsh/Autonomous-Hacks-harsh/backend/: app.py  schemas.py
backend/: app.py  pyproject.toml
backend/core/: waste_description.py  waste_management.py
backend/docs/: waste_api.md
backend/routes/: waste_management_routes.py
backend/scripts/: image_description.py  waste_input.json  waste_management.json
frontend/municipal-pulse-main/: .env  index.html  package-lock.json  tailwind.config.ts
frontend/municipal-pulse-main/public/: Ward_office.geojson
frontend/municipal-pulse-main/src/: App.tsx
frontend/municipal-pulse-main/src/components/: AhmedabadMapIframe.jsx  MapComponent.tsx
frontend/municipal-pulse-main/src/data/: dustbins.ts  forecastData.ts  resourceOptimizationData.ts  rts.ts  wasteWorkflowData.ts
frontend/municipal-pulse-main/src/logic/: distance.ts  simulateCollection.ts
frontend/municipal-pulse-main/src/pages/: CitizenEngagement.tsx  CityCommandCentre.tsx  CityForecasting.tsx  CorporatePartnerships.tsx  Dashboard.tsx  ImpactMetrics.tsx  LiveOperations.tsx  PlaceholderPage.tsx  TruckView.tsx
(+89 files in other folders)
